--- a/packages/enums/package.json
+++ b/packages/enums/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@social_blendr/enums",
+  "name": "@energy_map/enums",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
