--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@social_blendr/models",
+  "name": "@energy_map/models",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
