--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@social_blendr/services",
+  "name": "@energy_map/services",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
