--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -11,7 +11,6 @@ tmp
 
 # Frontend assets compiled code
 public/assets
-
 # Build tools specific
 npm-debug.log
 yarn-error.log
@@ -23,3 +22,5 @@ yarn-error.log
 
 # Platform specific
 .DS_Store
+
+/public/gas/gas.json
