--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,8 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@energy_map/enums": "workspace:*",
+    "@energy_map/models": "workspace:*",
+    "@energy_map/services": "workspace:*",
+    "@nuxtjs/leaflet": "^1.0.14",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.12.3",
     "vue": "latest"
-  }
+  },
+  "devDependencies": {}
 }
