[master] Adding some entities & logic for prices

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,6 +1,18 @@
+###> adonis ###
 TZ=UTC
 PORT=3333
 HOST=localhost
 LOG_LEVEL=info
-APP_KEY=Bk0kAyQ7vRLVKa2KKsdO2FexEovtVguz
+APP_KEY=null
 NODE_ENV=development
+
+GAS_PUBLIC_PATH=public/gas
+GAS_ZIP=gas.zip
+GAS_JSON=gas.json
+GAS_URL=null
+
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_USER=random
+DB_PASSWORD=random
+DB_DATABASE=energy_map
