--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -42,6 +42,7 @@
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
     "@swc/core": "^1.6.5",
+    "@types/leaflet": "^1.9.12",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.9",
     "@types/unzipper": "0.10.9",
@@ -67,6 +68,7 @@
     "axios": "^1.7.2",
     "luxon": "^3.4.4",
     "mysql2": "^3.10.2",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "5.1.7",
     "unzipper": "^0.12.1",
