[master] Adding filters & map

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -48,6 +48,7 @@
     "@types/unzipper": "0.10.9",
     "@types/uuid": "^10.0.0",
     "@types/xml2js": "^0.4.14",
+    "@types/cli-progress": "^3.11.6",
     "eslint": "^8.57.0",
     "hot-hook": "^0.2.6",
     "pino-pretty": "^11.2.1",
@@ -66,6 +67,7 @@
     "@vinejs/vine": "^2.1.0",
     "adonis-rabbit": "^0.2.0",
     "axios": "^1.7.2",
+    "cli-progress": "^3.12.0",
     "luxon": "^3.4.4",
     "mysql2": "^3.10.2",
     "pg": "^8.12.0",
