--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -16,3 +16,6 @@ DB_PORT=5432
 DB_USER=random
 DB_PASSWORD=random
 DB_DATABASE=energy_map
+
+POSITION_STACK_KEY=null
+POSITION_STACK_URL=http://api.positionstack.com/v1
