[master] adding department filter

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -9,6 +9,8 @@ NODE_ENV=development
 GAS_PUBLIC_PATH=public/gas
 GAS_ZIP=gas.zip
 GAS_JSON=gas.json
+SERVICES_JSON=services.json
+DEPARTMENTS_JSON=departments.json
 GAS_URL=null
 
 DB_HOST=127.0.0.1
