--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -23,4 +23,7 @@ yarn-error.log
 # Platform specific
 .DS_Store
 
-/public/gas/gas.json
+!/public/gas/departments.json
+!/public/gas/services.json
+
+/public/gas/*.json
